--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
 
-:root {
+/* :root {
   --primary: #059669;
   --bg-color-100: #f9fafb;
   --bg-color-200: #e5e7eb;
   --bg-color-300: #d1d5db;
   --bg-color-600: #4b5563;
+} */
+
+:root {
+  --primary: #0077b6;
+  --bg-color-100: #e2eafc;
+  --bg-color-200: #CCDBFD;
+  --bg-color-300: #B6CCFE;
+  --bg-color-600: #1B4965;
 }
 
 * {
@@ -29,6 +37,7 @@ body {
   margin: auto;
   border-radius: 1.5rem;
   padding-bottom: 0.4rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 8px;
 }
 
 header {
@@ -59,10 +68,6 @@ header {
   border-radius: 10px;
   border: 2px solid var(--primary);
   cursor: pointer;
-}
-
-.loader{
-  width : 2rem;
 }
 
 .help {
